# A2UI

./: README.md
.github/workflows/: ng_build_and_test.yml
a2a_agents/python/a2ui_extension/: README.md
a2a_agents/python/a2ui_extension/src/a2ui/: a2ui_extension.py
a2a_agents/python/a2ui_extension/tests/: test_extension.py
angular/projects/restaurant/src/app/: theme.ts
assets/: plant_cart.json
docs/: a2ui_protocol.md
docs/proposals/: v0_8.md
renderers/angular/: package-lock.json
renderers/lit/src/0.8/ui/: image.ts
renderers/python/: README.md  pyproject.toml
renderers/python/src/a2ui/: __init__.py
renderers/python/src/a2ui/v0_8/: __init__.py  data_model.py  processor.py  types.py
renderers/python/src/a2ui/v0_8/components/: __init__.py  html_renderer.py
samples/agent/adk/contact_lookup/: __main__.py
samples/agent/adk/digital_botanist/: __init__.py  __main__.py  pyproject.toml  tools.py
samples/agent/adk/forest_architect/: README.md  __init__.py  __main__.py  a2ui_examples.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  tools.py
samples/agent/adk/orchestrator/: agent.py  agent_executor.py
samples/agent/adk/rizzcharts/: agent.py  agent_executor.py  component_catalog_builder.py  pyproject.toml
samples/client/angular/: README.md  angular.json
samples/client/angular/projects/botanist/: tsconfig.app.json
samples/client/lit/botanist/: botanist.ts  tsconfig.json
samples/client/reflex/botanist/: .gitignore  README.md  rxconfig.py
specification/json/: catalog.json  gulf_protocol.json  standard_catalog.json
(+34 files in other folders)
